objects/ASI_CRM_SalesVolume__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Sales Volumes</relationshipLabel>
        <relationshipName>ASI_CRM_Customer_SalesVolumes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_DateTime__c</fullName>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PGLeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PG Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_SalesVolumes_PGLeader</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promoter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promoter</label>
        <referenceTo>ASI_CRM_Promoter__c</referenceTo>
        <relationshipLabel>Sales Volumes</relationshipLabel>
        <relationshipName>ASI_CRM_SalesVolume_Promoter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_StagingDateTime__c</fullName>
        <label>Staging DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SubBrand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Sales Volume</relationshipLabel>
        <relationshipName>ASI_CRM_SalesVolumes_SubBrand</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SubmitDateTime__c</fullName>
        <label>Submit DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Volume__c</fullName>
        <label>Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateTimeTODELETE__c</fullName>
        <label>DateTimeTODELETE</label>
        <type>DateTime</type>
    </fields>
    <label>Sales Volume</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_VN_Sales_Volumes</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_SubBrand__c</columns>
        <columns>ASI_CRM_Volume__c</columns>
        <columns>DateTimeTODELETE__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_SalesVolume__c.ASI_CRM_VN_SalesVolume</value>
        </filters>
        <label>All VN Sales Volumes</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SV-{YY}{000000}</displayFormat>
        <label>Sales Volume No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Volumes</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_VN_SalesVolume</fullName>
        <active>true</active>
        <label>VN Sales Volume</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>